# yournextrepresentative

./: .containerignore  .coveragerc  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .python-version  .travis.yml  CONTRIBUTING.md  Containerfile  Makefile  README.md  cdk.json  docker-compose.yml  gulpfile.js  manage.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  requirements.txt  reset_migrations.sh  run-tests  tox.ini
.circleci/: config.yml
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
bulk_adding/: views.py
cached_counts/: views.py
candidates/: election_specific.py  feeds.py  forms.py  serializers.py  urls.py
candidates/management/commands/: candidates_unset_elected.py
candidates/migrations/: 0033_changereviewed.py  0034_add_trusted_to_review_changes_group.py
candidates/models/: __init__.py  auth.py  db.py  popolo_extra.py
candidates/static/candidates/: _content.scss  _recent-change.scss
candidates/templates/candidates/: _recent-change.html  areas.html  posts-of-type.html  recent-changes.html  results.html
candidates/templatetags/: metadescription.py
candidates/tests/: auth.py  dates.py  factories.py  test_api.py  test_areas_of_type_view.py  test_change_reviewed.py  test_constituencies_declared.py  test_constituency_lock.py  test_constituency_view.py  test_csv_export.py  test_geolocation.py  test_hide_record_winner_buttons.py  test_leaderboard.py  test_mark_change_as_reviewed_view.py  test_new_person_view.py  test_other_names.py  test_recent_changes_view.py  test_record_winner.py  test_repr_methods.py  test_revert.py  test_upcoming_elections_api.py  uk_examples.py
candidates/views/: __init__.py  api.py  areas.py  constituencies.py  frontpage.py  people.py  search.py  users.py
cdk/: .gitignore  app.py  pytest.ini
cdk/stack/: waf.py  ynr.py
cdk/tests/: test_ynr_stack.py
container/run/: compose.service.postgres.yml
data/: ee_post_identifiers_no_divisions_2020-01.csv  ynmp-to-candidate-ids.csv
deploy/: ansible.cfg  crontab.yml  deploy.yml  import_sopns.yml  servers.aws_ec2.yml  vars.yml  vault.yml
deploy/cdk/: app.py  package-lock.json  package.json  requirements.txt
deploy/cdk/stack/: ynr.py
deploy/cdk/tests/: test_ynr_stack.py
deploy/data_exporter/: samconfig.toml  template.yaml
deploy/data_exporter/data_export_function/: Dockerfile  app.py  requirements.txt
deploy/group_vars/: staging.yml  ynr.yml
deploy/scripts/: write_envfile.py
deploy/webapp_settings/: production.py  staging.py
docs/: AWS_ENVIRONMENTS.md  DEVELOPMENT.md  INSTALL.md  INSTALL.old.md  groups.md
elections/example/: urls.py  views.py
elections/uk/: every_election.py  forms.py  geo_helpers.py  lib.py  mapit.py  settings.py  urls.py
elections/uk/migrations/: 0001_migrate_area_ids.py
elections/uk/templates/: base.html
elections/uk/tests/: ee_import_results.py  ee_postcode_results.py  test_country_specific.py  test_create_from_every_election_command.py  test_csv.py  test_custom_merge.py  test_finders.py  test_post_view.py
elections/uk/views/: frontpage.py  redirects.py
env/: frontend.env.example
hurl-tests/: README.md  about-page.hurl  site-root.hurl
lambdas/data_exporter/: samconfig.toml  template.yaml
lambdas/data_exporter/data_export_function/: Dockerfile  app.py
moderation_queue/: views.py
moderation_queue/migrations/: 0004_queuedimage_why_allowed.py  0007_auto_20150303_1420.py
moderation_queue/templates/moderation_queue/: photo-review.html
moderation_queue/tests/: test_queue.py
mysite/: wsgi.py
mysite/settings/: base.py  conf.py  local.example.py  testing.py  tests.py
official_documents/tests/: test_upload.py
requirements/: base.txt  deploy.txt  sopn_parsing.txt  testing.txt  travis.txt
results/: admin.py  feeds.py  models.py  tests.py
results/migrations/: 0012_migrate_resultevent_data.py  0017_rename_post_name_to_old_post_name.py  0018_fix_2015_resultevent_winners.py  0020_remove_resultevent_proxy_image_url_template.py  0021_resultevent_retraction.py
scripts/: aws-container-exec.bash  aws-container-exec.sh  check-database-url.sh  code-format.sh  container.compose.manage-py.bash  container.exec.bash  container.image.build.bash  container.manage-py.bash  container.pytest.bash  container.run.bash  environment-prevalidation.sh  get-prod-db.sh  update-ecs-task.sh  wait-for-stable-ecs-service.sh
scripts/ci/: dbmigrate.bash  dbmigrate.sh  prune-old-task-definitions.sh  update-ecs-task.bash  update-ecs-task.sh  wait-for-stable-ecs-service.bash
tasks/tests/: test_views.py
uk_results/: forms.py  tests.py
uk_results/migrations/: 0010_auto_20160427_0926.py  0013_auto_20160427_1410.py
vendor_assets/: .gitkeep
ynr/: __init__.py  account_adapter.py  celery.py  context_processors.py  extra_translations.py  forms.py  helpers.py  s3_storage.py  storages.py  urls.py  wsgi.py
ynr/apps/api/: apps.py  helpers.py  slack_hooks.py  urls.py  views.py
ynr/apps/auth_helpers/: admin.py  migrations.py  views.py
ynr/apps/bulk_adding/: fields.py  forms.py  helpers.py  models.py  tests.py  urls.py  views.py
ynr/apps/cached_counts/: admin.py  filters.py  models.py  report_helpers.py  tests.py  urls.py  views.py
ynr/apps/candidatebot/: apps.py  helpers.py
ynr/apps/candidates/: admin.py  api_permissions.py  constants.py  csv_helpers.py  diffs.py  election_specific.py  feeds.py  filters.py  forms.py  mastodon_api.py  middleware.py  search_indexes.py  serializers.py  tasks.py  twitter_api.py  urls.py  utils.py
ynr/apps/compat/: __init__.py  _compat.py  test.py
ynr/apps/data_exports/: admin.py  apps.py  csv_fields.py  filters.py  forms.py  models.py  urls.py  views.py
ynr/apps/duplicates/: README.md  apps.py  forms.py  (+4 more)
ynr/settings/: base.py  base_from_environment.py  deploy.py  dev.py  local.py.container.example  local.py.example  sopn_testing.py  testing.py  travis.py
ynr/templates/: base.html  error.html  generic_base.html  volunteer.html
ynr/tests/: test_signup.py
(+1373 files in other folders)
